--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,6 +37,17 @@ application.langs="en"
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
+#
+# db.default.logStatements=true
+# logger.comjolbox=DEBUG
+
+# MySQL Database Configuration
+#
+# db.mysql.driver=com.mysql.jdbc.Driver
+# db.mysql.url="jdbc:mysql://localhost/playdb"
+# db.default.user=playdbuser
+# db.default.pass=""
+
 
 # Evolutions
 # ~~~~~
