--- a/conf/securesocial.conf
+++ b/conf/securesocial.conf
@@ -150,8 +150,8 @@ securesocial {
 	github {
 		authorizationUrl="https://github.com/login/oauth/authorize"
 		accessTokenUrl="https://github.com/login/oauth/access_token"
-		clientId="test"
-		clientSecret="test"
+		clientId="6179d2cada94aec2d6b8"
+		clientSecret="efa8654be9bf9fdc502084b8bd7ed5531418ee00"
 	}
 
 	foursquare {
