--- a/conf/application.conf
+++ b/conf/application.conf
@@ -43,10 +43,10 @@ application.langs="en"
 
 # MySQL Database Configuration
 #
-# db.mysql.driver=com.mysql.jdbc.Driver
-# db.mysql.url="jdbc:mysql://localhost/playdb"
-# db.default.user=playdbuser
-# db.default.pass=""
+ db.default.driver=com.mysql.jdbc.Driver
+ db.default.url="jdbc:mysql://14.63.214.234/tsop"
+ db.default.user=root
+ db.default.pass="tsop1234"
 
 
 # Evolutions
